# image-hash

./: CMakeLists.txt  PImgHash.cpp  PImgHash.h  README.md  imghash.cpp  imghash.h  imgio.cpp  imgio.h  main.cpp  png.cpp
